--- a/TeamProject/Views/Bookings/Book.cshtml
+++ b/TeamProject/Views/Bookings/Book.cshtml
@@ -35,56 +35,95 @@
 </div>
 @section scripts
 {
-<script>
+    <script>
 
         $(document).ready(function () {
-            const $container = $('#data-container');
-            const timeslotDate = TimeslotDate(refreshTimeslotsTable);
+            const $container = $('#data-container'),
+                timeslotDate = TimeslotDate(refreshTimeslotsTable),
+                $courtTitle=$('#court-title'),
+                utils = {
 
-            let utils = {
-                getSelectedCourtId: () => $('nav.sidenav li.active').attr('court-id')
-            }
+                    // returns selected courtId
+                    getSelectedCourtId: function () {
+                        return $('nav.sidenav li.active').attr('court-id');
+                    },
+
+                    // returns divs with week days for timeslot header
+                    getTimeslotsHeader: function(data) {
+                        return ["", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
+                            .map(function (i) {
+                                return '<div class="col text-center">' + i + '</div>';
+                            })
+                            .join('');
+                    },
+
+                    // return div with week days timeslots body
+                    getTimeslotsBody: function (data) {
+                        let tbody = '';
+
+                        data.map(function (timeslot) {
+                            let localhour = hourTo24Format(timeslot.Hour);
+
+                            tbody += '<div class="row timeslot" time="' + timeslot.Hour + '">';
+
+                            tbody += '<div class="col text-center">' + localhour + '</div>';
+
+                            for (let j = 0; j < 7; j++) {
+                                tbody += '<div class="col text-center" day="' + j + '" value="' + timeslot['Day' + (j + 1)] + '">' + (timeslot['Day' + (j + 1)] == 1 ? localhour : '') + '</div>';
+                            }
+
+                            tbody += '</div>';
+                        });
+
+                        return tbody;
+                    },
+
+                    // set active courtId on side nav bar 
+                    // and update header title 
+                    setActiveCourt: function (courtId) {
+                        const $courtItem = $('nav.sidenav li[court-id="' + courtId + '"]');
+
+                        $courtItem.addClass('active');
+                        $courtTitle.text($courtItem.text());
+                    }
+                }
 
             $('#next-week-btn').on('click', timeslotDate.goNextWeek);
             $('#prev-week-btn').on('click', timeslotDate.goPrevWeek);
+            $('#data-container').on('click', '.timeslot div[value="1"]', onTimeslotClick);
+            $('nav').on('click', 'li', onNavCourtClick);
 
+            utils.setActiveCourt(@Model.CourtId);
+            
+            // update period date title
+            // and call refreshtimeslots 
+            timeslotDate.updatePeriod();
+
+            // refresh timeslots called from updatePeriod
             function refreshTimeslotsTable() {
                 getTimeslots(utils.getSelectedCourtId());
             }
 
+            // Get timeslots and build container header+body
             function getTimeslots(courtId) {
-
-                updateCourtTitle(courtId);
 
                 $.getJSON('/api/book/' + courtId, {
                     fromDate: timeslotDate.firstWeekDate().toUTCString(),
                     toDate: timeslotDate.lastWeekDate().toUTCString()
                 }).done(function (data) {
 
-                    let weekDays = getTimeslotsHeader(),
-                        tbody = '';
-
-                    data.map(function (timeslot) {
-                        let localhour = hourTo24Format(timeslot.Hour);
-
-                        tbody += '<div class="row timeslot" time="' + timeslot.Hour +'">';
-
-                        tbody += '<div class="col text-center">' + localhour + '</div>';
-
-                        for (let j = 0; j < 7; j++) {
-                            tbody += '<div class="col text-center" day="'+j+'" value="' + timeslot['Day' + (j + 1)] + '">' + (timeslot['Day'+(j+1)] == 1 ? localhour : '') + '</div>';
-                        }
-
-                        tbody += '</div>';
-                    });
-                    let table = '<div class="timeslots"><div class="row">' + weekDays + '</div>' +
-                        tbody +'</div>';
-                    $container.html(table);
+                    $container.html(
+                        '<div class="timeslots">' +
+                            '<div class="row">' + utils.getTimeslotsHeader() + '</div>' +
+                            utils.getTimeslotsBody(data) +
+                        '</div>');
 
                 });
             }
 
-            $('#data-container').on('click', '.timeslot div[value="1"]', function (e) {
+            
+            // on clicked timeslot book selected date time
+            function onTimeslotClick() {
                 let hour = $(this).parent().attr('time'),
                     day = $(this).attr('day'),
                     dateTime = timeslotDate.getSelectedDate(parseInt(day, 10), getHour(hour));
@@ -95,7 +134,6 @@
                     bookedAt: dateTime.toUTCString()
                 };
 
-                console.log(dateTime);
                 $.ajax({
                     url: '/api/book/',
                     type: "PUT",
@@ -103,30 +141,25 @@
                     contentType: "application/json",
                     data: JSON.stringify(data),
                     success: function (result) {
-                        console.log(result);
-                        getTimeslots(courtId);
+                        //console.log(result);
+                        refreshTimeslotsTable();
                     }
                 });
-
-            });
+            }
 
             // on court click (sidebar navigation)
             // sets clicked court item active
-            $('nav').on('click', 'li', function (e) {
-                const courtId= $(this).attr('court-id');
+            function onNavCourtClick() {
+                const courtId = $(this).attr('court-id');
 
                 $(this).siblings().removeClass('active');
-                $(this).addClass('active');
 
+                utils.setActiveCourt(courtId);
                 getTimeslots(courtId);
-            });
-
-            // calculates and returns weeks start date based on current date
-            function getMonday(currentDate) {
-                const day = currentDate.getDay(),
-                    diff = currentDate.getDate() - day + (day == 0 ? -6 : 1);
-                return new Date(currentDate.setDate(diff)).getDate();
+                
             }
+
+
 
             // converts hour string to in 24 format string
             function hourTo24Format(hour) {
@@ -138,70 +171,48 @@
                 return new Date('2019-01-01 ' + hour).getHours();
             }
 
-            // updates court title from courtId parameter
-            function updateCourtTitle(courtId) {
-                const courtName = $('nav.sidenav li[court-id="' + courtId + '"]')
-                    .text();
-
-                $('#court-title')
-                    .text(courtName);
+            function TimeslotDate(onDateChange) {
+                const $weekPeriodTitle = $('#timeslot-week');
+                const that = {
+                    currentDate: new Date(),
+                    firstWeekDay: function () {
+                        return that.firstWeekDate().getDate();
+                    },
+                    // calculates and returns weeks start date based on current date
+                    firstWeekDate: function () {
+                        const day = that.currentDate.getDay(),
+                            diff = that.currentDate.getDate() - day + (day == 0 ? -6 : 1);
+                        return new Date(that.currentDate.setDate(diff));
+                    },
+                    lastWeekDate: function () {
+                        return new Date(that.firstWeekDate().setDate(that.firstWeekDate().getDate() + 7));
+                    },
+                    updatePeriod: function () {
+                        $weekPeriodTitle.text(
+                            that.firstWeekDate().toLocaleDateString() + ' - ' +
+                            that.lastWeekDate().toLocaleDateString());
+                        onDateChange();
+                    },
+                    goNextWeek: function () {
+                        that.currentDate.setDate(that.currentDate.getDate() + 7);
+                        that.updatePeriod();
+                    },
+                    goPrevWeek: function () {
+                        that.currentDate.setDate(that.currentDate.getDate() - 7);
+                        that.updatePeriod();
+                    },
+                    getSelectedDate: function (day, hour) {
+                        return new Date(that.firstWeekDate().getFullYear(),
+                            that.firstWeekDate().getMonth(),
+                            that.firstWeekDay() + day,
+                            hour,
+                            0, 0);
+                    }
+                }
+                return that;
             }
-
-            // returns divs with week days for timeslot header
-            function getTimeslotsHeader() {
-                return ["", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
-                    .map(function (i) {
-                        return '<div class="col text-center">' + i + '</div>';
-                    }).join('');
-            }
-
-            $('nav.sidenav li[court-id="@Model.CourtId"]').addClass('active');
-
-            timeslotDate.updatePeriod();
-
-
-
         });
 
-        function TimeslotDate(onDateChange) {
-            const $weekPeriodTitle = $('#timeslot-week');
-            const that = {
-                currentDate: new Date(),
-                firstWeekDay: function () {
-                    return that.firstWeekDate().getDate();
-                },
-                firstWeekDate: function () {
-                    const day = that.currentDate.getDay(),
-                        diff = that.currentDate.getDate() - day + (day == 0 ? -6 : 1);
-                    return new Date(that.currentDate.setDate(diff));
-                },
-                lastWeekDate: function () {
-                    return new Date(that.firstWeekDate().setDate(that.firstWeekDate().getDate() + 7));
-                },
-                updatePeriod: function () {
-                    $weekPeriodTitle.text(that.firstWeekDate().toLocaleDateString() + ' - ' +
-                        that.lastWeekDate().toLocaleDateString());
-                    onDateChange();
-                },
-                goNextWeek: function () {
-                    that.currentDate.setDate(that.currentDate.getDate() + 7);
-                    that.updatePeriod();
-                },
-                goPrevWeek: function () {
-                    that.currentDate.setDate(that.currentDate.getDate() - 7);
-                    that.updatePeriod();
-                },
-                getSelectedDate: function (day, hour) {
-                    return new Date(that.firstWeekDate().getFullYear(),
-                        that.firstWeekDate().getMonth(),
-                        that.firstWeekDay() + day,
-                        hour,
-                        0, 0);
-                }
-            }
-            return that;
-        }
-
-</script>
+    </script>
 }
 
