move book to courts controller and bookings to admin panel

--- a/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         @if (Session["User"] != null)
                         {
                             <li class="nav-item">
+                                @Html.ActionLink("Bookings", "Index", "Bookings", new { area = "Admin" }, new { @class = "nav-link" })
+                            </li>
+                            <li class="nav-item">
                                 @Html.ActionLink("Branches", "Index", "Branches", new { area = "Admin" }, new { @class = "nav-link" })
                             </li>
 
@@ -42,9 +45,6 @@
                                 </li>
                                 <li class="nav-item">
                                     @Html.ActionLink("Facilities", "Index", "Facilities", new { area = "Admin" }, new { @class = "nav-link" })
-                                </li>
-                                <li class="nav-item">
-                                    @Html.ActionLink("Booking", "Index", "Booking", new { area = "Admin" }, new { @class = "nav-link" })
                                 </li>
                                 <li class="nav-item">
                                     @Html.ActionLink("TimeSlots", "Index", "TimeSlots", new { area = "Admin" }, new { @class = "nav-link" })
