--- a/TeamProject/Views/Courts/Index.cshtml
+++ b/TeamProject/Views/Courts/Index.cshtml
@@ -17,7 +17,7 @@
                 <div class="card-body align-content-end flex-column">
                     <h5 class="card-title">@court.Name</h5>
                     <p class="card-text">@court.Description</p>
-                    <a href="/bookings/book/@court.Id" class="btn btn-success btn-lg active mt-auto" role="button" aria-pressed="true">Book Now!</a>
+                    <a href="/Courts/book/@court.Id" class="btn btn-success btn-lg active mt-auto" role="button" aria-pressed="true">Book Now!</a>
                     <a href="/Courts/Details/@court.Id" class="btn btn-success btn-lg active mt-auto" role="button" aria-pressed="true">Details!</a>
                 </div>
             </div>
