--- a/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -49,6 +49,9 @@
                                 <li class="nav-item">
                                     @Html.ActionLink("Users", "Index", "Users", new { area = "Admin" }, new { @class = "nav-link" })
                                 </li>
+                                <li class="nav-item">
+                                    @Html.ActionLink("Roles", "Index", "Roles", new { area = "Admin" }, new { @class = "nav-link" })
+                                </li>
                             }
                         }
 
