--- a/TeamProject/Areas/Admin/Views/Users/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>USers</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
