--- a/TeamProject/Views/Branches/Nearest.cshtml
+++ b/TeamProject/Views/Branches/Nearest.cshtml
@@ -31,7 +31,7 @@
     <div class="card mb-3 rounded rounded-lg border border-success d-flex p-2 bd-highlight d-flex">
         <div class="row no-gutters">
             <div class="col-md-4">
-                <img src="~/Images/BranchesImages/@branch.ImageCourt" class="card-img" alt="@branch.Name" style="height:auto;">
+                <img src="~/Images/CourtsImages/@branch.ImageCourt" class="card-img" alt="@branch.Name" style="height:auto;">
             </div>
             <div class="col-md-8">
                 <div class="card-body align-content-end flex-column">
