Changed Nearest branches image to set in mid!

--- a/TeamProject/Views/Branches/Nearest.cshtml
+++ b/TeamProject/Views/Branches/Nearest.cshtml
@@ -30,7 +30,7 @@
 {
     <div class="card mb-3 rounded rounded-lg border border-success d-flex p-2 bd-highlight d-flex">
         <div class="row no-gutters">
-            <div class="col-md-4">
+            <div class="col-md-4" style="margin-top:auto;margin-bottom:auto;">
                 <img src="~/Images/CourtsImages/@branch.ImageCourt" class="card-img" alt="@branch.Name" style="height:auto;">
             </div>
             <div class="col-md-8">
