added commas after welcoming for better syntax

--- a/TeamProject/Areas/Admin/Views/Panel/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Panel/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <h2 class="text-center" style="margin-top:150px;">Welcome @user.Firstname @user.Lastname</h2>
+    <h2 class="text-center" style="margin-top:150px;">Welcome, @user.Firstname @user.Lastname</h2>
 </div>
 
 
