--- a/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Index.cshtml
@@ -51,7 +51,7 @@
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id }) |
-            @Html.ActionLink("Courts", "IndexByBranch", "courts", new { id = item.Id },null)
+            @Html.ActionLink("Courts", "Index", "courts", new { id = item.Id },null)
         </td>
     </tr>
 }
