--- a/TeamProject/Areas/Admin/Views/Courts/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Create.cshtml
@@ -39,13 +39,13 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.ImageCourt, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ImageCourt, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
     <div class="form-group">
         @Html.LabelFor(model => model.MaxPlayers, htmlAttributes: new { @class = "control-label col-md-2" })
