--- a/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
@@ -41,13 +41,13 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.ImageCourt, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ImageCourt, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
     <div class="form-group">
         @Html.LabelFor(model => model.MaxPlayers, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -80,7 +80,7 @@
 </div>
 }
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index",new { id=Model.BranchId})
 </div>
 <hr />
 <h2>Timeslots</h2>
@@ -118,7 +118,6 @@
 </table>
 <div>
     @Html.ActionLink("Edit TimeSlots", "Index", "Timeslots", new { id = Model.Id }, null)
-
 </div>
 
 
