Remove Courts from admin navbar and change Edit/Details Views on Courts per Branches

--- a/TeamProject/Areas/Admin/Views/Courts/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Create.cshtml
@@ -79,7 +79,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = Model.BranchId })
 </div>
 
 @section Scripts {
