--- a/TeamProject/Areas/Admin/Views/Courts/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Delete.cshtml
@@ -59,7 +59,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", new { id = Model.BranchId })
         </div>
     }
 </div>
