--- a/TeamProject/Areas/Admin/Views/Courts/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Details.cshtml
@@ -54,5 +54,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = Model.BranchId })
+    
 </p>
