--- a/TeamProject/Views/Courts/Book.cshtml
+++ b/TeamProject/Views/Courts/Book.cshtml
@@ -35,6 +35,7 @@
 </div>
 @section scripts
 {
+    <script src="~/Scripts/moment.js"></script>
     <script>
 
         $(document).ready(function () {
