--- a/TeamProject/Areas/Admin/Views/Branches/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Create.cshtml
@@ -74,10 +74,10 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.ImageBranch, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input type="file" name="ImageFile" />
-            @Html.ValidationMessageFor(model => model.ImageCourt, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
         </div>
     </div>
 
