--- a/TeamProject/Areas/Admin/Views/Branches/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Edit.cshtml
@@ -82,10 +82,10 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.ImageCourt, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.ImageBranch, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input type="file" name="ImageFile" />
-            @Html.ValidationMessageFor(model => model.ImageCourt, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.ImageBranch, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -95,6 +95,7 @@
         </div>
     </div>
 </div>
+    
 }
 
 <div>
