--- a/TeamProject/Views/Courts/Index.cshtml
+++ b/TeamProject/Views/Courts/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="card mb-3 rounded rounded-lg border border-success d-flex p-2 bd-highlight d-flex">
         <div class="row no-gutters">
             <div class="col-md-4" style="margin-top:auto;margin-bottom:auto;">
-                <img src="~/Images/CourtsImages/@court.ImageCourt" class="card-img" alt="@court.Name">
+                <img src="~/Images/Courts/@court.ImageCourt" class="card-img" alt="@court.Name">
             </div>
             <div class="col-md-8">
                 <div class="card-body align-content-end flex-column">
