--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -20,21 +20,21 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="~/Images/CarrouselImages/FIFA-2018-World-Cup-Featured-1366x768.jpg" alt="First slide">
+            <img class="d-block w-100" src="~/Images/Carrousel/FIFA-2018-World-Cup-Featured-1366x768.jpg" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>World Cap!</h5>
                 <p>Find Your Court Now!</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/Images/CarrouselImages/880x495_cmsv2_a9dcd7ed-1ff5-5d7c-8de0-63b847a68c91-3156825.jpg" alt="Second slide">
+            <img class="d-block w-100" src="~/Images/Carrousel/880x495_cmsv2_a9dcd7ed-1ff5-5d7c-8de0-63b847a68c91-3156825.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>We love Football!</h5>
                 <p>Find Your Court Now!</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/Images/CarrouselImages/Footbal_Men_Ball_Glove_515345_1366x768.jpg" alt="Third slide">
+            <img class="d-block w-100" src="~/Images/Carrousel/Footbal_Men_Ball_Glove_515345_1366x768.jpg" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Ball Court easy to find!</h5>
                 <p>Find Your Court Now!</p>
@@ -76,7 +76,7 @@
         {
             <div class="col-md-4 d-none d-sm-block col-sm-5">
                 <div class="card bg-dark text-white rounded ml-3 mt-3 mr-3">
-                    <img src="~/Images/CourtsImages/@court.ImageCourt" class="card-img movie-Thumbnail" alt="@court.Name">
+                    <img src="~/Images/Courts/@court.ImageCourt" class="card-img movie-Thumbnail" alt="@court.Name">
                     <div class="card-img-overlay">
                         <h4 class="card-title text-center">@court.Name</h4>
                         <a href="/Courts/Book/@court.Id" class="btn btn-block btn-success bottom">Book Now only @court.Price&euro; ! </a>
