--- a/TeamProject/Areas/Admin/Views/Branches/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Edit.cshtml
@@ -21,7 +21,6 @@
     @if (isAdmin)
     {
         <div class="form-group">
-
             @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
@@ -45,7 +44,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Longitude, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Longitude, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HiddenFor(model => model.Longitude, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Longitude, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -53,7 +52,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Latitude, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Latitude, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HiddenFor(model => model.Latitude, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Latitude, "", new { @class = "text-danger" })
         </div>
     </div>
