Changed images for branches

--- a/TeamProject/Areas/Admin/Views/Branches/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Details.cshtml
@@ -76,7 +76,7 @@
                     @Html.DisplayNameFor(model => model.ImageBranch)
                 </dt>
                 <dd>
-                   <img src="~/Images/CourtsImages/@Model.ImageBranch"  alt="@Model.Name"/>
+                   <img src="~/Images/Branches/@Model.ImageBranch"  alt="@Model.Name"/>
                 </dd>
             </dl>
         </div>
