--- a/TeamProject/Areas/Admin/Views/Bookings/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Bookings", "Index")
 </div>
 
 @section Scripts {
