--- a/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Edit.cshtml
@@ -80,7 +80,7 @@
 </div>
 }
 <div>
-    @Html.ActionLink("Back to List", "Index",new { id=Model.BranchId})
+    @Html.ActionLink("Back to Courts", "Index",new { id=Model.BranchId})
 </div>
 <hr />
 <h2>Timeslots</h2>
