--- a/TeamProject/Areas/Admin/Views/TimeSlots/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new { id = ViewBag.id })
+    @Html.ActionLink("Back to TimeSlots", "Index", new { id = ViewBag.id })
 </div>
 
 @section Scripts {
