--- a/TeamProject/Areas/Admin/Views/TimeSlots/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Edit.cshtml
@@ -58,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new { id = Model.CourtId })
+    @Html.ActionLink("Back to TimeSlots", "Index", new { id = Model.CourtId })
 </div>
 
 @section Scripts {
