--- a/TeamProject/Areas/Admin/Views/Users/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Edit.cshtml
@@ -82,7 +82,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Users", "Index")
 </div>
 
 @section Scripts {
