--- a/TeamProject/Views/Reviews/Create.cshtml
+++ b/TeamProject/Views/Reviews/Create.cshtml
@@ -64,7 +64,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Reviews", "Index")
 </div>
 
 @section Scripts {
