--- a/TeamProject/Views/Reviews/Details.cshtml
+++ b/TeamProject/Views/Reviews/Details.cshtml
@@ -54,5 +54,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Reviews", "Index")
 </p>
