--- a/TeamProject/Areas/Admin/Views/Bookings/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Edit.cshtml
@@ -58,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Bookings", "Index")
 </div>
 
 @section Scripts {
