--- a/TeamProject/Areas/Admin/Views/Branches/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Create.cshtml
@@ -90,7 +90,7 @@
 }
 
 <div >
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Branches", "Index")
 </div>
 
 @section Scripts {
