--- a/TeamProject/Areas/Admin/Views/Branches/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Delete.cshtml
@@ -75,7 +75,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to Branches", "Index")
         </div>
     }
 </div>
