--- a/TeamProject/Areas/Admin/Views/Courts/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Create.cshtml
@@ -79,7 +79,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new { id = Model.BranchId })
+    @Html.ActionLink("Back to Courts", "Index", new { id = ViewBag.Id })
 </div>
 
 @section Scripts {
