--- a/TeamProject/Areas/Admin/Views/Courts/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Details.cshtml
@@ -54,6 +54,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index", new { id = Model.BranchId })
+    @Html.ActionLink("Back to Courts", "Index", new { id = Model.BranchId })
     
 </p>
