--- a/TeamProject/Areas/Admin/Views/Roles/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Roles/Create.cshtml
@@ -32,7 +32,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Roles", "Index")
 </div>
 
 @section Scripts {
