--- a/TeamProject/Areas/Admin/Views/Roles/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Roles/Delete.cshtml
@@ -25,7 +25,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-secondary" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to Roles", "Index")
         </div>
     }
 </div>
