--- a/TeamProject/Areas/Admin/Views/Roles/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Roles/Edit.cshtml
@@ -33,7 +33,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Roles", "Index")
 </div>
 
 @section Scripts {
