--- a/TeamProject/Areas/Admin/Views/TimeSlots/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Delete.cshtml
@@ -50,7 +50,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index", new { id = Model.CourtId })
+            @Html.ActionLink("Back to TimeSlots", "Index", new { id = Model.CourtId })
         </div>
     }
 </div>
