--- a/TeamProject/Areas/Admin/Views/TimeSlots/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/TimeSlots/Details.cshtml
@@ -46,5 +46,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index", new { id = Model.CourtId })
+    @Html.ActionLink("Back to TimeSlots", "Index", new { id = Model.CourtId })
 </p>
