--- a/TeamProject/Areas/Admin/Views/Users/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Delete.cshtml
@@ -43,7 +43,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to Users", "Index")
         </div>
     }
 </div>
