--- a/TeamProject/Areas/Admin/Views/Users/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Users/Details.cshtml
@@ -40,5 +40,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Users", "Index")
 </p>
