Changed display name in index branch

--- a/TeamProject/Areas/Admin/Views/Branches/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Details.cshtml
@@ -71,12 +71,11 @@
             </dl>
         </div>
         <div class="col-sm">
+            <h4>@Html.DisplayNameFor(model => model.ImageBranch)</h4>
+            <hr />
             <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.ImageBranch)
-                </dt>
                 <dd>
-                   <img src="~/Images/Branches/@Model.ImageBranch"  alt="@Model.Name"/>
+                    <img src="~/Images/Branches/@Model.ImageBranch" alt="@Model.Name" />
                 </dd>
             </dl>
         </div>
