Changes to Footer Partial

--- a/TeamProject/Views/Login/Index.cshtml
+++ b/TeamProject/Views/Login/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Login";
 }
 <br /><br />
-<div class="text-center">
+<div class="text-center" style="margin-top:150px;margin-bottom:150px;">
     <form class="form-horizontal" action="/Login/Login" method="post">
         <img class="mb-4" src="~/Images/LoginImage/business-team-meeting.jpg" alt="Project 4" width="100" height="100">
         <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
@@ -14,4 +14,5 @@
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    
 }
